[package]
name = "axum_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
tracing-subscriber = "0.3.18"
tower = "0.4.13"
tracing = "0.1.40"
anyhow = "1.0"
once_cell = "1.19.0"
